--- a/Theory html/text formating and nested element.html
+++ b/Theory html/text formating and nested element.html
@@ -75,7 +75,7 @@
 
     <marquee behavior="scroll" direction="">hiiiiii ...........I m sonal........</marquee>
     <marquee behavior="scroll" direction="right"> hiiiiii ...........I m sonal.......</marquee>
-    <marquee behavior="scroll" onMouseOver="this.stop()" onMouseOut="this.start()">hiiiiii ...........I m neha.......
+    <marquee behavior="scroll" onMouseOver="this.stop()" onMouseOut="this.start()">hiiiiii ...........I m sonal.......
     </marquee>
     <br>
     <br>
