--- a/html/link tag/link.html
+++ b/html/link tag/link.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    zzx
+    <!-- folder link -->
+    <a href="web.html">my file</a>
+
+
+    <!-- koy pan link leva mate -->
+    <a href="https://www.youtube.com/watch?v=dVtFlRSMQBg" target="_blank">my file</a>
 </body>
+
 </html>
